<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:swipe="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:dividerPadding="@dimen/activity_horizontal_margin"
    android:orientation="vertical" >

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C9C9C9"/>
    
    <LinearLayout
        android:id="@+id/resultTitleLayout"
        android:background="#a8000000"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="5dp" >

	    <TextView
	        style="@style/trainItemWHITE"
	        android:id="@+id/titleHistoryTrainType"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1.3"
	        android:text="@string/titleTrainType" />
	    <TextView
	        style="@style/trainItemWHITE"
	        android:id="@+id/titleHistoryDepInfo"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/titleStartInfo" />
	    <TextView
	        style="@style/trainItemWHITE"
	        android:id="@+id/titleHistoryArrInfo"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/titleEndInfo" />
	    <TextView
	        style="@style/trainItemWHITE"
	        android:id="@+id/titleHistoryStatus"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1.5"
	        android:text="@string/titleStatus" />
	    <TextView
	        style="@style/trainItemWHITE"
	        android:id="@+id/titleHistoryDelayInfo"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/titleDelayInfo" />
	</LinearLayout>
	
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C9C9C9"/>

    <ListView
        android:id="@+id/trainHistoryListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:persistentDrawingCache="animation|scrolling" />
            
    <!--android:layout_above="@+id/search_adView" -->
    <Button
        android:id="@+id/refreshButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" 
        android:background="@drawable/button_resource"
        android:gravity="center"
        android:text="@string/titleRefreshButton"
        android:textSize="23sp" />
 
</LinearLayout>