<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:swipe="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:dividerPadding="@dimen/activity_horizontal_margin"
    android:orientation="vertical" >

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C9C9C9"/>
    
    <LinearLayout
        android:id="@+id/resultTitleLayout"
        android:background="#a8000000"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="5dp" >

	    <TextView
	        style="@style/trainItemWHITE"
	        android:id="@+id/titleTrainType"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1.3"
	        android:text="@string/titleTrainType" />
	    <TextView
	        style="@style/trainItemWHITE"
	        android:id="@+id/titleDepInfo"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/titleStartInfo" />
	    <TextView
	        style="@style/trainItemWHITE"
	        android:id="@+id/titleArrInfo"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/titleEndInfo" />
	    <TextView
	        style="@style/trainItemWHITE"
	        android:id="@+id/titleStatus"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1.5"
	        android:text="@string/titleStatus" />
	    <TextView
	        style="@style/trainItemWHITE"
	        android:id="@+id/titleDelayInfo"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/titleDelayInfo" />
	</LinearLayout>
	
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C9C9C9"/>
    <!--
    <com.praisehim.koraildelay.SwipeLibrary.SwipeRefreshLayout

	    android:id="@+id/refresher"
	    android:background="@drawable/refresh"
	    android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" >
    -->

    <ListView
        android:id="@+id/trainListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:persistentDrawingCache="animation|scrolling" />
    
    <com.google.android.gms.ads.AdView
        android:id="@+id/result_adView"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adUnitId="ca-app-pub-5773773713964441/4881687412"
        ads:adSize="BANNER" />

<!-- 
	android:layoutAnimation="@anim/anim_layout_controller"
	</com.praisehim.koraildelay.SwipeLibrary.SwipeRefreshLayout>
 -->
    
</LinearLayout>
