<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <!-- 열차종류 -->
    <LinearLayout
        android:id="@+id/trainTypeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/layout_item_click"
        android:layout_margin="5dp" >

		<ImageView
		    android:layout_width="30dp"
		    android:layout_height="30dp"
		    android:layout_gravity="center_vertical"
		    android:layout_margin="3dp"
		    android:scaleType="fitCenter"
		    android:src="@drawable/icon_train" />

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical"
		    android:textSize="21sp"
			android:layout_margin="3dp"
			android:text="@string/titleTrainType" />
		<TextView
		    android:id="@+id/editTrainType"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="right"
		    android:layout_gravity="right|center_vertical"
		    android:textSize="21sp"
		    android:layout_margin="3dp" />
    </LinearLayout>
    
    
    <!-- 날짜 -->
    <LinearLayout
        android:id="@+id/depDateContainer"
        android:layout_below="@+id/trainTypeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/layout_item_click"
        android:layout_margin="5dp" >

		<ImageView
		    android:layout_width="30dp"
		    android:layout_height="30dp"
		    android:layout_gravity="center_vertical"
		    android:layout_margin="3dp"
		    android:scaleType="fitCenter"
		    android:src="@drawable/icon_calendar" />

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical"
		    android:textSize="21sp"
			android:layout_margin="3dp"
			android:text="@string/titleDepDate" />
		<TextView
		    android:id="@+id/editDepDate"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="right"
		    android:layout_gravity="right|center_vertical"
		    android:textSize="21sp"
		    android:layout_margin="3dp"  />
    </LinearLayout>
    
    <!-- 시간 -->
    <LinearLayout
        android:id="@+id/depTimeContainer"
        android:layout_below="@+id/depDateContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/layout_item_click"
        android:layout_margin="5dp" >

		<ImageView
		    android:layout_width="30dp"
		    android:layout_height="30dp"
		    android:layout_gravity="center_vertical"
		    android:layout_margin="3dp"
		    android:scaleType="fitCenter"
		    android:src="@drawable/icon_clock" />

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical"
		    android:textSize="21sp"
			android:layout_margin="3dp"
			android:text="@string/titleDepTime" />
		<TextView
		    android:id="@+id/editDepTime"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="right"
		    android:layout_gravity="right|center_vertical"
		    android:textSize="21sp"
		    android:layout_margin="3dp"  />
    </LinearLayout>
    
    <!-- 승차역 -->
    <LinearLayout
        android:id="@+id/depStationContainer"
        android:layout_below="@+id/depTimeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/layout_item_click"
        android:layout_margin="5dp" >

		<ImageView
		    android:layout_width="30dp"
		    android:layout_height="30dp"
		    android:layout_gravity="center_vertical"
		    android:layout_margin="3dp"
		    android:src="@drawable/icon_dep_station"
		    android:scaleType="fitXY" />

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical"
		    android:textSize="21sp"
			android:layout_margin="3dp"
			android:text="@string/titleDepInfo" />
		<TextView
		    android:id="@+id/editDepStation"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="right"
		    android:layout_gravity="right|center_vertical"
		    android:textSize="21sp"
		    android:layout_margin="3dp"  />
    </LinearLayout>
    
    <!-- 하차역 -->
    <LinearLayout
        android:id="@+id/arrStaionContainer"
        android:layout_below="@+id/depStationContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/layout_item_click"
        android:layout_margin="5dp" >

		<ImageView
		    android:layout_width="30dp"
		    android:layout_height="30dp"
		    android:layout_gravity="center_vertical"
		    android:layout_margin="3dp"
		    android:src="@drawable/icon_arr_station"
		    android:scaleType="fitXY" />

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical"
		    android:textSize="21sp"
			android:layout_margin="3dp"
			android:text="@string/titleArrInfo" />
		<TextView
		    android:id="@+id/editArrStation"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="right"
		    android:layout_gravity="right|center_vertical"
		    android:textSize="21sp"
		    android:layout_margin="3dp"  />
    </LinearLayout>

    <Button
        android:id="@+id/searchButton"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" 
        android:background="@drawable/search_button_click"
        android:gravity="center"
        android:text="@string/titleSearchButton"
        android:textSize="23sp" />

</RelativeLayout>
